Extrude to Cursor tool: it don't allow to correct position of new vertex after LMB pressed #114282

Closed
opened 2023-10-30 17:44:07 +01:00 by Slava · 2 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits, Windows 10 64bit
Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.6.5, branch: main (modified), commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e
Worked: version 3.2, caused by 4d0f846b93

Short description of error
In Edit mode, Extrude to Cursor tool don't allow correct position of new vertex after pressing LMB and before release LMB. And, of couse, don't work snapping, axe align, precision mode and so on.

Exact steps for others to reproduce the error

  • Make sure to use the selection with LMB
  • Enter to Edit mode on any mesh object (f.e. Cube)
  • Select one vertex of the mesh
  • Select Extrude to Cursor tool
  • Press left mouse button anywhere in viewport and stay it pressed to adjust position.

New vertex added exacly to mouse cursor, but, there not way to correct vertex position, as it was in previous Blender versions.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits, Windows 10 64bit Graphics card: NVIDIA GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.6.5, branch: main (modified), commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` Worked: version 3.2, caused by 4d0f846b93 **Short description of error** In Edit mode, Extrude to Cursor tool _don't allow correct position_ of new vertex after pressing LMB and before release LMB. And, of couse, don't work snapping, axe align, precision mode and so on. **Exact steps for others to reproduce the error** - Make sure to use the selection with LMB - Enter to Edit mode on any mesh object (f.e. Cube) - Select one vertex of the mesh - Select Extrude to Cursor tool - Press left mouse button anywhere in viewport and stay it pressed to adjust position. New vertex added exacly to mouse cursor, but, there not way to correct vertex position, as it was in previous Blender versions.
Slava added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-30 17:44:08 +01:00

Thanks for the report, @RVV. I can confirm the issue.
Regression introduced in 3.2
Caused by 4d0f846b93
@ideasman42 ^

Thanks for the report, @RVV. I can confirm the issue. Regression introduced in 3.2 Caused by 4d0f846b93 @ideasman42 ^
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-30 22:02:45 +01:00

Fixed 4bec9d0d71.

Fixed 4bec9d0d7162b0ca321cee5987c086c10319d65f.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-10-31 05:05:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114282
No description provided.