Fix #114282: Extrude to Cursor tool no longer tweaks on drag

Regression in [0] which only ran drag events if the press event passed
through.

Resolve using the same logic as select picking
(see: WM_operator_flag_only_pass_through_on_press).

[0]: 4d0f846b936c9101ecb76a6db962aac2d74a460a